--- a/style.css
+++ b/style.css
@@ -131,14 +131,16 @@ body {
   line-height: 1.6;
   font-weight: 400;
   font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: rgb(50, 50, 50); }
+  color: rgb(50, 50, 50);
+  margin: 10;
+}
 
 
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1 {
   font-family: 'Prata', serif;
-  font-weight: 500;
+  font-weight: 1000;
 }
 
 h1, h2, h3, h4, h5, h6 {
