--- a/style.css
+++ b/style.css
@@ -132,7 +132,9 @@ body {
   font-weight: 400;
   font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: rgb(50, 50, 50);
-  margin: 10;
+}
+article {
+  margin: 10
 }
 
 
