--- a/style.css
+++ b/style.css
@@ -145,6 +145,10 @@ h1 {
   font-weight: 1000;
 }
 
+h4 {
+  font-weight: 750;
+}
+
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0;
